--- a/project.config.json
+++ b/project.config.json
@@ -6,15 +6,16 @@
 	"setting": {
 		"urlCheck": true,
 		"es6": true,
-		"enhance": true,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
-		"coverView": true,
+		"nodeModules": true,
 		"autoAudits": false,
+		"checkInvalidKey": true,
+		"enhance": true,
+		"coverView": true,
 		"showShadowRootInWxmlPanel": true,
 		"scopeDataCheck": false,
-		"checkInvalidKey": true,
 		"checkSiteMap": true,
 		"uploadWithSourceMap": true,
 		"babelSetting": {
@@ -22,7 +23,7 @@
 			"disablePlugins": [],
 			"outputPath": ""
 		},
-		"nodeModules": true
+		"uglifyFileName": true
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.10.4",
