--- a/project.config.json
+++ b/project.config.json
@@ -60,9 +60,9 @@
 			"current": -1,
 			"list": [
 				{
-					"id": -1,
-					"name": "pages/sign/step1/step1",
-					"pathName": "pages/sign/step1/step1",
+					"id": 0,
+					"name": "pages/sign/sign",
+					"pathName": "pages/sign/sign",
 					"query": "",
 					"scene": null
 				},
@@ -70,6 +70,35 @@
 					"id": -1,
 					"name": "pages/index/index",
 					"pathName": "pages/index/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/list/list",
+					"pathName": "pages/list/list",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/store/store",
+					"pathName": "pages/store/store",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/sign/sign",
+					"pathName": "pages/sign/sign",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/pay/pay",
+					"pathName": "pages/pay/pay",
+					"query": "",
 					"scene": null
 				}
 			]
