--- a/project.config.json
+++ b/project.config.json
@@ -100,6 +100,13 @@
 					"pathName": "pages/pay/pay",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/store/store",
+					"pathName": "pages/store/store",
+					"query": "shop_id=9",
+					"scene": null
 				}
 			]
 		}
