--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
     "pages": [
         "pages/route/route",
         "pages/alert/alert",
+        "pages/article/article",
         "pages/list/list",
         "pages/store/store",
         "pages/poi/poi",
