--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
         "backgroundTextStyle": "light",
         "backgroundColor": "#ffffff",
         "navigationBarBackgroundColor": "#07c160",
-        "navigationBarTitleText": "小杯子先享卡",
+        "navigationBarTitleText": "小杯子优惠GO",
         "navigationBarTextStyle": "white"
     },
     "permission": {
